--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
         "lexer.h": "c",
         "pmm.h": "c",
         "terminal.h": "c",
-        "stack.h": "c"
+        "stack.h": "c",
+        "mem.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
