--- a/saturn9/cfg/limine.cfg
+++ b/saturn9/cfg/limine.cfg
@@ -1,18 +1,16 @@
-TIMEOUT=1
+TIMEOUT=0
 
-# The entry name that will be displayed in the boot menu.
 :saturn9 (KASLR on)
-    # We use the Limine boot protocol.
     PROTOCOL=limine
 
-    # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
+    MODULE_PATH=boot:///initramfs
     KERNEL_PATH=boot:///saturn.bin
 
 # Same thing, but without KASLR.
 :saturn9 (KASLR off)
     PROTOCOL=limine
-
-    # Disable KASLR (it is enabled by default for relocatable kernels)
+    
     KASLR=no
 
+    MODULE_PATH=boot:///initramfs
     KERNEL_PATH=boot:///saturn.bin
