[+Feat] { New Filesystem approach, the old one was really unsafe }

--- a/saturn9/cfg/limine.cfg
+++ b/saturn9/cfg/limine.cfg
@@ -3,14 +3,5 @@ TIMEOUT=0
 :saturn9 (KASLR on)
     PROTOCOL=limine
 
-    MODULE_PATH=boot:///initramfs
-    KERNEL_PATH=boot:///saturn.bin
-
-# Same thing, but without KASLR.
-:saturn9 (KASLR off)
-    PROTOCOL=limine
-    
-    KASLR=no
-
-    MODULE_PATH=boot:///initramfs
+    MODULE_PATH=boot:///ramdisk
     KERNEL_PATH=boot:///saturn.bin
